dropshot/tests/fail/unused_endpoint.stderr
error: constant `unused_endpoint` is never used
  --> tests/fail/unused_endpoint.rs:22:10
   |
22 | async fn unused_endpoint(
   |          ^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/fail/unused_endpoint.rs:5:9
   |
 5 | #![deny(dead_code)]
   |         ^^^^^^^^^
